# x86

./: Cargo.toml  LICENSE-MIT  README.md
src/: lib.rs
src/instructions/: cpuid.rs  mod.rs  paging.rs  port.rs  random.rs  tlb.rs
src/registers/: flags.rs  mod.rs  model_specific.rs  segmentation.rs
src/structures/: descriptor.rs  idt.rs  mod.rs  task_state.rs  tss.rs
src/structures/paging/: bits64.rs  mod.rs
