[package]
name = "x88"
version = "0.1.0"
authors = [ "Jarl Evanson <evanson.jarl@gmail.com>" ]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]

[lints.rust]
# Safety lints
unsafe_op_in_unsafe_fn = "deny"

# Documentation lints
missing_docs = "warn"

[lints.clippy]
# Safety lints
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "deny"

# Documentation lints
missing_safety_doc = "deny"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_docs_in_private_items = "warn"

[profile.release]
overflow-checks = true
