[package]
name = "x88"
version = "0.1.0"
authors = [ "Jarl Evanson <evanson.jarl@gmail.com>" ]
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
# Enables support for `x86` specific items
x86 = []
# Enables support for `x86_64` specific items
x86_64 = []
# Enables `x86` and `x86_64` specific instructions.
instructions = []

[dependencies]

[lints.rust]
# Safety lints
unsafe_op_in_unsafe_fn = "deny"

# Documentation lints
missing_docs = "warn"

[lints.clippy]
# Safety lints
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "deny"

# Documentation lints
missing_safety_doc = "deny"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_docs_in_private_items = "warn"

[profile.release]
overflow-checks = true
